# Array-File-Reader

./: ArrayFileReader.cpp  ArrayFileReader.h  ArrayStreamReader.cpp  ArrayStreamReader.h  BinaryFileParser.cpp  BinaryFileParser.h  CMakeLists.txt  README.md  SparseFileParser.cpp  SparseFileParser.h  Timer.h  array2dfileparser.cpp  array2dfileparser.h  buildRandomTxtFile.cpp  iostreamTest.cpp  readFromDisk.cpp  sarray2dfileparser.h  sarray2dfromfile.cpp  sarray2dfromfile.h  sarray2dfromfile_old.h  sparse_test.cpp  testinputsmall_double_sparse.txt  utilsarray2dfromfile.h
